[gd_scene format=3 uid="uid://hud"]

[ext_resource type="Script" uid="uid://c0gumqhqt6hgg" path="res://src/ui/hud.gd" id="1"]
[ext_resource type="FontFile" uid="uid://x0ewq378heow" path="res://assets/fonts/American Captain.ttf" id="2_4rn03"]

[node name="HUD" type="CanvasLayer" unique_id=1118501156]
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=554240024]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainerP1" type="HBoxContainer" parent="MarginContainer" unique_id=978391751]
layout_mode = 2

[node name="VBoxContainerP1" type="VBoxContainer" parent="MarginContainer/HBoxContainerP1" unique_id=645715338]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/separation = 5

[node name="NameLabelP1" type="Label" parent="MarginContainer/HBoxContainerP1/VBoxContainerP1" unique_id=1808332002]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_4rn03")
theme_override_font_sizes/font_size = 24
text = "DONA ROSA"

[node name="HealthBarP1" type="ProgressBar" parent="MarginContainer/HBoxContainerP1/VBoxContainerP1" unique_id=1604005045]
custom_minimum_size = Vector2(400, 20)
layout_mode = 2
value = 100.0
show_percentage = false

[node name="HBoxContainerScore" type="HBoxContainer" parent="MarginContainer" unique_id=1485423935]
layout_mode = 2
alignment = 1

[node name="VBoxContainerScore" type="VBoxContainer" parent="MarginContainer/HBoxContainerScore" unique_id=497302963]
layout_mode = 2

[node name="HBoxContainerScore" type="HBoxContainer" parent="MarginContainer/HBoxContainerScore/VBoxContainerScore" unique_id=1381202975]
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="MarginContainer/HBoxContainerScore/VBoxContainerScore/HBoxContainerScore" unique_id=819327578]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_4rn03")
theme_override_font_sizes/font_size = 35
text = "Score: 0"

[node name="TimerLabel" type="Label" parent="MarginContainer/HBoxContainerScore/VBoxContainerScore" unique_id=837479002]
visible = false
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_4rn03")
theme_override_font_sizes/font_size = 30
text = "Time: 0:00"

[node name="HBoxContainerP2" type="HBoxContainer" parent="MarginContainer" unique_id=1831727099]
layout_mode = 2
alignment = 2

[node name="VBoxContainerP2" type="VBoxContainer" parent="MarginContainer/HBoxContainerP2" unique_id=1384826668]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/separation = 5

[node name="LivesLabelP2Coin" type="Label" parent="MarginContainer/HBoxContainerP2/VBoxContainerP2" unique_id=1413575276]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_4rn03")
theme_override_font_sizes/font_size = 30
text = "INSERT COIN"

[node name="NameLabelP1" type="Label" parent="MarginContainer/HBoxContainerP2/VBoxContainerP2" unique_id=1591085974]
visible = false
layout_mode = 2
text = "DON PABLO"

[node name="HealthBarP2" type="ProgressBar" parent="MarginContainer/HBoxContainerP2/VBoxContainerP2" unique_id=596652101]
visible = false
custom_minimum_size = Vector2(400, 20)
layout_mode = 2
value = 100.0
show_percentage = false
